Changes: 1. CarryEngine and its related classes are now COMPLETELY OOP-less, with stricter lifecycle(By LockableBox). 2. Added some Util data classes for developing. 3. Renamed most mixin classes, making them more self-descriptive.
Signed-off-by: Kurv Cygnus <2052405063@qq.com>